<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.mooeypoo</groupId>
  <artifactId>ChatMonitor</artifactId>
  <version>1.0.0</version>
  <name>Minecraft Chat Monitor</name>

   <build>
		<resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.8.1</version>
				<configuration>
		            <source>1.8</source>
		            <target>1.8</target>
		        </configuration>
          </plugin>
	  	  <plugin>
	        <artifactId>maven-assembly-plugin</artifactId>
	        <executions>
	          <execution>
	            <phase>package</phase>
	            <goals>
	              <goal>single</goal>
	            </goals>
	          </execution>
	        </executions>
	        <configuration>
	          <descriptorRefs>
	            <descriptorRef>jar-with-dependencies</descriptorRef>
	          </descriptorRefs>
	        </configuration>
        </plugin>

		<plugin>
		    <groupId>org.jacoco</groupId>
		    <artifactId>jacoco-maven-plugin</artifactId>
		    <version>0.8.5</version>
		    <executions>
		        <!--
		            Prepares the property pointing to the JaCoCo runtime agent which
		            is passed as VM argument when Maven the Surefire plugin is executed.
		        -->
		        <execution>
		            <id>pre-unit-test</id>
		            <goals>
		                <goal>prepare-agent</goal>
		            </goals>
		            <configuration>
		                <!-- Sets the path to the file which contains the execution data. -->
		                <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
		                <!--
		                    Sets the name of the property containing the settings
		                    for JaCoCo runtime agent.
		                -->
		                <propertyName>surefireArgLine</propertyName>
		            </configuration>
		        </execution>
		        <!--
		            Ensures that the code coverage report for unit tests is created after
		            unit tests have been run.
		        -->
		        <execution>
		            <id>post-unit-test</id>
		            <phase>test</phase>
		            <goals>
		                <goal>report</goal>
		            </goals>
		            <configuration>
		                <!-- Sets the path to the file which contains the execution data. -->
		                <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
		                <!-- Sets the output directory for the code coverage report. -->
		                <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
		            </configuration>
		        </execution>
		    </executions>
		</plugin>

            <!-- Used for unit tests -->
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>2.17</version>
			    <configuration>
				    <testFailureIgnore>true</testFailureIgnore>
			        <!-- Sets the VM argument line used when unit tests are run. -->
			        <!-- argLine>${surefireArgLine}</argLine -->
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m ${surefireArgLine}</argLine>
			        <!-- Skips unit tests if the value of skip.unit.tests property is true -->
			        <skipTests>${skip.unit.tests}</skipTests>
			        <!-- Excludes integration tests when unit tests are run. -->
			        <excludes>
			            <exclude>**/IT*.java</exclude>
			        </excludes>
			    </configuration>
			</plugin>

      </plugins>

   </build>

   <repositories>
	    <repository>
	        <id>spigot-repo</id>
	        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
	    </repository>
   </repositories>

   <dependencies>

		<dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.3-R0.1-SNAPSHOT</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
		<dependency>
			<groupId>space.arim.dazzleconf</groupId>
			<artifactId>dazzleconf-ext-snakeyaml</artifactId>
			<version>1.1.0</version>
		</dependency>

		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>1.26</version>
			<scope>provided</scope> <!-- Prevents it from being shaded -->
		</dependency>
		<dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>

		<dependency>
		    <groupId>com.google.jimfs</groupId>
		    <artifactId>jimfs</artifactId>
		    <version>1.1</version>
            <scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
		<!-- dependency>
		    <groupId>net.sourceforge.cobertura</groupId>
		    <artifactId>cobertura</artifactId>
		    <version>2.1.1</version>
		    <scope>test</scope>
		</dependency -->

		<dependency>
		    <groupId>com.github.seeseemelk</groupId>
		    <artifactId>MockBukkit-v1.16</artifactId>
		    <version>0.5.0</version>
		    <scope>test</scope>
	    </dependency>
   </dependencies>
</project>